// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for Monthly housekeeping policy 1`] = `
<div
  className="page page-limited"
  id="marketplace-page"
>
  <Suggestions
    suggestions="audit-logs"
  />
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="audit_logs.page"
  />
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      audit_logs.page
    </h1>
  </header>
  <p
    className="big-spacer-bottom"
  >
    audit_logs.page.description.1
    <br />
    <FormattedMessage
      defaultMessage="audit_logs.page.description.2"
      id="audit_logs.page.description.2"
      values={
        Object {
          "housekeeping": "audit_logs.housekeeping_policy.Monthly",
          "link": <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "hash": "#auditLogs",
                "pathname": "/admin/settings",
                "query": Object {
                  "category": "housekeeping",
                },
              }
            }
          >
            audit_logs.page.description.link
          </Link>,
        }
      }
    />
  </p>
  <div
    className="huge-spacer-bottom"
  >
    <h2
      className="big-spacer-bottom"
    >
      audit_logs.download
    </h2>
    <ul>
      <li
        className="spacer-bottom"
        key="today"
      >
        <Radio
          checked={true}
          onCheck={[MockFunction]}
          value="today"
        >
          audit_logs.range_option.today
        </Radio>
      </li>
      <li
        className="spacer-bottom"
        key="7days"
      >
        <Radio
          checked={false}
          onCheck={[MockFunction]}
          value="7days"
        >
          audit_logs.range_option.7days
        </Radio>
      </li>
      <li
        className="spacer-bottom"
        key="30days"
      >
        <Radio
          checked={false}
          onCheck={[MockFunction]}
          value="30days"
        >
          audit_logs.range_option.30days
        </Radio>
      </li>
      <li
        className="spacer-bottom"
        key="custom"
      >
        <Radio
          checked={false}
          onCheck={[MockFunction]}
          value="custom"
        >
          audit_logs.range_option.custom
        </Radio>
      </li>
    </ul>
    <DateRangeInput
      className="big-spacer-left"
      maxDate={2020-07-21T12:00:00.000Z}
      minDate={2020-06-21T12:00:00.000Z}
      onChange={[MockFunction]}
    />
  </div>
  <DownloadButton
    downloadStarted={false}
    onStartDownload={[MockFunction]}
    selection="today"
  />
</div>
`;

exports[`should render correctly for Trimestrial housekeeping policy 1`] = `
<div
  className="page page-limited"
  id="marketplace-page"
>
  <Suggestions
    suggestions="audit-logs"
  />
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="audit_logs.page"
  />
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      audit_logs.page
    </h1>
  </header>
  <p
    className="big-spacer-bottom"
  >
    audit_logs.page.description.1
    <br />
    <FormattedMessage
      defaultMessage="audit_logs.page.description.2"
      id="audit_logs.page.description.2"
      values={
        Object {
          "housekeeping": "audit_logs.housekeeping_policy.Trimestrial",
          "link": <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "hash": "#auditLogs",
                "pathname": "/admin/settings",
                "query": Object {
                  "category": "housekeeping",
                },
              }
            }
          >
            audit_logs.page.description.link
          </Link>,
        }
      }
    />
  </p>
  <div
    className="huge-spacer-bottom"
  >
    <h2
      className="big-spacer-bottom"
    >
      audit_logs.download
    </h2>
    <ul>
      <li
        className="spacer-bottom"
        key="today"
      >
        <Radio
          checked={true}
          onCheck={[MockFunction]}
          value="today"
        >
          audit_logs.range_option.today
        </Radio>
      </li>
      <li
        className="spacer-bottom"
        key="7days"
      >
        <Radio
          checked={false}
          onCheck={[MockFunction]}
          value="7days"
        >
          audit_logs.range_option.7days
        </Radio>
      </li>
      <li
        className="spacer-bottom"
        key="30days"
      >
        <Radio
          checked={false}
          onCheck={[MockFunction]}
          value="30days"
        >
          audit_logs.range_option.30days
        </Radio>
      </li>
      <li
        className="spacer-bottom"
        key="90days"
      >
        <Radio
          checked={false}
          onCheck={[MockFunction]}
          value="90days"
        >
          audit_logs.range_option.90days
        </Radio>
      </li>
      <li
        className="spacer-bottom"
        key="custom"
      >
        <Radio
          checked={false}
          onCheck={[MockFunction]}
          value="custom"
        >
          audit_logs.range_option.custom
        </Radio>
      </li>
    </ul>
    <DateRangeInput
      className="big-spacer-left"
      maxDate={2020-07-21T12:00:00.000Z}
      minDate={2020-04-22T12:00:00.000Z}
      onChange={[MockFunction]}
    />
  </div>
  <DownloadButton
    downloadStarted={false}
    onStartDownload={[MockFunction]}
    selection="today"
  />
</div>
`;

exports[`should render correctly for Weekly housekeeping policy 1`] = `
<div
  className="page page-limited"
  id="marketplace-page"
>
  <Suggestions
    suggestions="audit-logs"
  />
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="audit_logs.page"
  />
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      audit_logs.page
    </h1>
  </header>
  <p
    className="big-spacer-bottom"
  >
    audit_logs.page.description.1
    <br />
    <FormattedMessage
      defaultMessage="audit_logs.page.description.2"
      id="audit_logs.page.description.2"
      values={
        Object {
          "housekeeping": "audit_logs.housekeeping_policy.Weekly",
          "link": <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "hash": "#auditLogs",
                "pathname": "/admin/settings",
                "query": Object {
                  "category": "housekeeping",
                },
              }
            }
          >
            audit_logs.page.description.link
          </Link>,
        }
      }
    />
  </p>
  <div
    className="huge-spacer-bottom"
  >
    <h2
      className="big-spacer-bottom"
    >
      audit_logs.download
    </h2>
    <ul>
      <li
        className="spacer-bottom"
        key="today"
      >
        <Radio
          checked={true}
          onCheck={[MockFunction]}
          value="today"
        >
          audit_logs.range_option.today
        </Radio>
      </li>
      <li
        className="spacer-bottom"
        key="7days"
      >
        <Radio
          checked={false}
          onCheck={[MockFunction]}
          value="7days"
        >
          audit_logs.range_option.7days
        </Radio>
      </li>
      <li
        className="spacer-bottom"
        key="custom"
      >
        <Radio
          checked={false}
          onCheck={[MockFunction]}
          value="custom"
        >
          audit_logs.range_option.custom
        </Radio>
      </li>
    </ul>
    <DateRangeInput
      className="big-spacer-left"
      maxDate={2020-07-21T12:00:00.000Z}
      minDate={2020-07-14T12:00:00.000Z}
      onChange={[MockFunction]}
    />
  </div>
  <DownloadButton
    downloadStarted={false}
    onStartDownload={[MockFunction]}
    selection="today"
  />
</div>
`;

exports[`should render correctly for Yearly housekeeping policy 1`] = `
<div
  className="page page-limited"
  id="marketplace-page"
>
  <Suggestions
    suggestions="audit-logs"
  />
  <Helmet
    defer={true}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="audit_logs.page"
  />
  <header
    className="page-header"
  >
    <h1
      className="page-title"
    >
      audit_logs.page
    </h1>
  </header>
  <p
    className="big-spacer-bottom"
  >
    audit_logs.page.description.1
    <br />
    <FormattedMessage
      defaultMessage="audit_logs.page.description.2"
      id="audit_logs.page.description.2"
      values={
        Object {
          "housekeeping": "audit_logs.housekeeping_policy.Yearly",
          "link": <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to={
              Object {
                "hash": "#auditLogs",
                "pathname": "/admin/settings",
                "query": Object {
                  "category": "housekeeping",
                },
              }
            }
          >
            audit_logs.page.description.link
          </Link>,
        }
      }
    />
  </p>
  <div
    className="huge-spacer-bottom"
  >
    <h2
      className="big-spacer-bottom"
    >
      audit_logs.download
    </h2>
    <ul>
      <li
        className="spacer-bottom"
        key="today"
      >
        <Radio
          checked={true}
          onCheck={[MockFunction]}
          value="today"
        >
          audit_logs.range_option.today
        </Radio>
      </li>
      <li
        className="spacer-bottom"
        key="7days"
      >
        <Radio
          checked={false}
          onCheck={[MockFunction]}
          value="7days"
        >
          audit_logs.range_option.7days
        </Radio>
      </li>
      <li
        className="spacer-bottom"
        key="30days"
      >
        <Radio
          checked={false}
          onCheck={[MockFunction]}
          value="30days"
        >
          audit_logs.range_option.30days
        </Radio>
      </li>
      <li
        className="spacer-bottom"
        key="90days"
      >
        <Radio
          checked={false}
          onCheck={[MockFunction]}
          value="90days"
        >
          audit_logs.range_option.90days
        </Radio>
      </li>
      <li
        className="spacer-bottom"
        key="custom"
      >
        <Radio
          checked={false}
          onCheck={[MockFunction]}
          value="custom"
        >
          audit_logs.range_option.custom
        </Radio>
      </li>
    </ul>
    <DateRangeInput
      className="big-spacer-left"
      maxDate={2020-07-21T12:00:00.000Z}
      minDate={2019-07-22T12:00:00.000Z}
      onChange={[MockFunction]}
    />
  </div>
  <DownloadButton
    downloadStarted={false}
    onStartDownload={[MockFunction]}
    selection="today"
  />
</div>
`;
